# icarix-traslate-bot

./: .replit  README.md  bot.py  database.py  keep_alive.py  language_utils.py  main.py  models.py  pyproject.toml  requirements.txt
attached_assets/: Pasted-Parece-que-est-s-enfrentando-un-problema-relacionado-con-la-importaci-n-de-m-dulos-en-tu-proyecto-E-1744834398882.txt  Pasted-Parece-que-te-has-encontrado-con-un-problema-relacionado-con-la-instalaci-n-de-las-dependencias-o-la-1744838787002.txt  Pasted-Plan-de-la-Aplicaci-n-Telegram-Translator-Bot-1-Prototipo-Inicial-El-prototipo-se-enfocar-en-la--1744780936546.txt  Pasted-from-telegram-import-Update-ChatPermissions-from-telegram-ext-import-ApplicationBuilder-CommandHa-1744783278665.txt
static/: styles.css
templates/: index.html
