[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-cloud-translate>=3.20.2",
    "gunicorn>=23.0.0",
    "iso-639>=0.4.5",
    "iso639>=0.1.4",
    "langdetect>=1.0.9",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot==20.7",
    "sift-stack-py>=0.5.0",
    "telegram>=0.0.1",
]
